2006-07-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS:
	Updated to include VMMemoryMXBeanImpl.
	* doc/vmintegration.texinfo: Likewise.
	* examples/gnu/classpath/examples/management/TestMemory.java:
	New file.
	* gnu/java/lang/management/ClassLoadingMXBeanImpl.java:
	Remove redundant import.
	* gnu/java/lang/management/MemoryMXBeanImpl.java:
	New file.
	* gnu/java/lang/management/ThreadMXBeanImpl.java:
	Remove redundant import.
	* java/lang/management/ManagementFactory.java:
	(getMemoryMXBean()): Implemented.
	* java/lang/management/MemoryMXBean.java,
	* java/lang/management/MemoryUsage.java:
	New files.
	* java/lang/management/ThreadInfo.java:
	(toString()): Updated documentation.
	* vm/reference/gnu/java/lang/management/VMMemoryMXBeanImpl.java:
	New file.
	
2006-07-01  Anthony Green  <green@redhat.com>

	* resource/META-INF/services/javax.sound.midi.spi.MidiFileReader,
	gnu/javax/sound/midi/file/MidiFileReader.java,
	gnu/javax/sound/midi/file/ExtendedMidiFileFormat.java,
	gnu/javax/sound/midi/file/MidiDataInputStream.java: New files.

2006-07-02  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/crypto/prng/ARCFour.java: Source formatting.
	* gnu/javax/crypto/prng/CSPRNG.java: Likewise.
	* gnu/javax/crypto/prng/Fortuna.java: Likewise.
	* gnu/javax/crypto/prng/ICMGenerator.java: Likewise.
	* gnu/javax/crypto/prng/PBKDF2.java: Likewise.
	* gnu/javax/crypto/prng/PRNGFactory.java: Likewise.
	* gnu/javax/crypto/prng/UMacGenerator.java: Likewise.

2006-07-02  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/javax/crypto/pad/BasePad.java: Source formatting.
	* gnu/javax/crypto/pad/IPad.java: Likewise.
	* gnu/javax/crypto/pad/PadFactory.java: Likewise.
	* gnu/javax/crypto/pad/PKCS1_V1_5.java: Likewise.
	* gnu/javax/crypto/pad/PKCS7.java: Likewise.
	* gnu/javax/crypto/pad/SSL3.java: Likewise.
	* gnu/javax/crypto/pad/TBC.java: Likewise.
	* gnu/javax/crypto/pad/TLS1.java: Likewise.
	* gnu/javax/crypto/pad/WrongPaddingException.java: Likewise.
